OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Marketing_Tactics_Used__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tactics_Used__c</fullName>
    <inlineHelpText>Please be as detailed as possible.  Do not use single word descriptions.  

Example:  Web marketing will need the web address as well as if they plan to do organic search or paid search.  

The more details the better.</inlineHelpText>
    <label>Marketing Tactics Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Store Front</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>