OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Modified_Over_60_days__c.field-meta.xml
<CustomField>
    <fullName>Modified_Over_60_days__c</fullName>
    <formula>AND(
TODAY() - DATEVALUE(LastModifiedDate) &gt; 60,
RecordType.Name = &apos;Standard Opportunity&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Over 60 Days Ago</label>
    <type>Checkbox</type>
</CustomField>