OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Date for the next step to take place</description>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>