OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Onboarding_Tier__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Tier__c</fullName>
    <label>Onboarding Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>