OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Rep Generated</description>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Organic SEO</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Marketing Paid Ads</fullName>
            </value>
            <value>
                <fullName>Outbound Recruiting Efforts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>