OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Opportunity_Dealer_Office__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Dealer_Office__c</fullName>
    <formula>POE_Dealer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Dealer Office</label>
    <type>Text</type>
</CustomField>