OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>IF(ISNULL(Owner.FirstName), &quot;&quot;, Owner.FirstName &amp; &quot; &quot;)    &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>