OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Opportunity_Paperwork_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Paperwork_Status__c</fullName>
    <description>This is the paperwork status for the various program opportunities for an account.</description>
    <label>Opportunity Paperwork Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Account Setup</fullName>
            </value>
            <value>
                <fullName>Approved by DIRECTV - Account Setup</fullName>
            </value>
            <value>
                <fullName>Approved By Sales</fullName>
            </value>
            <value>
                <fullName>Awaiting Background Check</fullName>
            </value>
            <value>
                <fullName>Awaiting Credit Check</fullName>
            </value>
            <value>
                <fullName>Background Complete</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Credit Check Complete</fullName>
            </value>
            <value>
                <fullName>Customer Canceled</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Denied by CenturyLink</fullName>
            </value>
            <value>
                <fullName>Exede approved - Pending training</fullName>
                <label>Viasat approved - Pending training</label>
            </value>
            <value>
                <fullName>Exede Denied-Closed Beam</fullName>
                <label>Viasat Denied-Closed Beam</label>
            </value>
            <value>
                <fullName>Exede Denied-Incomplete 1</fullName>
                <label>Viasat Denied-Incomplete 1</label>
            </value>
            <value>
                <fullName>Exede Denied-Incomplete 2</fullName>
                <label>Viasat Denied-Incomplete 2</label>
            </value>
            <value>
                <fullName>Exede Denied-Incomplete 3 Back to Sales</fullName>
                <label>Viasat Denied-Incomplete 3 Back to Sales</label>
            </value>
            <value>
                <fullName>Exede training complete - Pending setup</fullName>
                <label>Viasat training complete - Pending setup</label>
            </value>
            <value>
                <fullName>Exede V2 Prep</fullName>
                <label>Viasat V2 Prep</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Final Setup</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Incomplete - Attempt 1</fullName>
            </value>
            <value>
                <fullName>Incomplete - Attempt 2</fullName>
            </value>
            <value>
                <fullName>Incomplete - Attempt 3</fullName>
            </value>
            <value>
                <fullName>Incomplete - Attempt 3 - Back to Sales</fullName>
            </value>
            <value>
                <fullName>Incomplete - Attempt 4</fullName>
            </value>
            <value>
                <fullName>Incomplete - Attempt 5</fullName>
            </value>
            <value>
                <fullName>Incomplete Ongoing Attempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>