OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Opportunity_Source_Layer_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source_Layer_3__c</fullName>
    <description>This is used for the third layer of opportunities from our marketing efforts to give us the ability to drill down into each tactic and how it is working for us.</description>
    <label>Opportunity Source Layer 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source_Tactic__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T AR Leads</fullName>
            </value>
            <value>
                <fullName>Called In Cross Recruiting</fullName>
            </value>
            <value>
                <fullName>Outbound Cross Recruiting</fullName>
            </value>
            <value>
                <fullName>AT&amp;T ASM</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Alder</fullName>
            </value>
            <value>
                <fullName>SafeStreets</fullName>
            </value>
            <value>
                <fullName>Optidge</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>Predictive Modeling List</fullName>
            </value>
            <value>
                <fullName>LAD&apos;s List</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>