OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Opportunity_to_Contract__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_to_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Number</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>