OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value__c</fullName>
    <description>CATVMSO Field - Overall value of opportunity</description>
    <inlineHelpText>CATVMSO Field - Overall value of opportunity</inlineHelpText>
    <label>Opportunity Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>