OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Outcome_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Modified_Date__c</fullName>
    <label>Outcome Modified Date</label>
    <type>Date</type>
</CustomField>