OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Outcome_Modified_Days__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Modified_Days__c</fullName>
    <formula>TODAY() -  Outcome_Modified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outcome Modified Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>