OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
                <label>Outside TM</label>
            </value>
            <value>
                <fullName>Inside BDM</fullName>
            </value>
            <value>
                <fullName>Outside BB BDM</fullName>
                <label>Outside BDM</label>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Inside COM BDM</fullName>
                <label>Commercial BDM</label>
            </value>
            <value>
                <fullName>COM Specialist</fullName>
                <label>Commercial RSM</label>
            </value>
            <value>
                <fullName>National Acct Mgrs</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Outside Sales</fullName>
            </value>
            <value>
                <fullName>ISG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>