OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Paperwork_Completed1__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Completed1__c</fullName>
    <description>What paperwork has been completed?</description>
    <inlineHelpText>What paperwork has been completed?</inlineHelpText>
    <label>Paperwork Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Program_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACH Authorization</fullName>
            </value>
            <value>
                <fullName>App for Dealer Status</fullName>
            </value>
            <value>
                <fullName>ATT Contract</fullName>
            </value>
            <value>
                <fullName>Auto Ship / Deferred Invoice agreement</fullName>
            </value>
            <value>
                <fullName>Bank and Trade Info</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Business Plan Approval</fullName>
            </value>
            <value>
                <fullName>CenturyLink Application</fullName>
            </value>
            <value>
                <fullName>CenturyLink Cert of Insurance</fullName>
            </value>
            <value>
                <fullName>CenturyLink Base Contract</fullName>
            </value>
            <value>
                <fullName>CenturyLink Contract -19</fullName>
            </value>
            <value>
                <fullName>CenturyLink Contract - B5</fullName>
            </value>
            <value>
                <fullName>CenturyLink Contract - B7</fullName>
            </value>
            <value>
                <fullName>CenturyLink Contract - C8</fullName>
            </value>
            <value>
                <fullName>CenturyLink D2D Contract</fullName>
            </value>
            <value>
                <fullName>Certificate of Insurance</fullName>
            </value>
            <value>
                <fullName>Commercial Retailer Agreement</fullName>
            </value>
            <value>
                <fullName>Connected Services Agreement</fullName>
            </value>
            <value>
                <fullName>Copy of Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Copy of Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Credit Card/Debit Card Auth</fullName>
            </value>
            <value>
                <fullName>Dealer Insurance Requirements</fullName>
            </value>
            <value>
                <fullName>DIRECTV COMM Buydown</fullName>
            </value>
            <value>
                <fullName>DIRECTV MDU Buydown</fullName>
            </value>
            <value>
                <fullName>DIRECTV MSO Buydown - MB</fullName>
            </value>
            <value>
                <fullName>DIRECTV MSO Buydown - P10</fullName>
                <label>DIRECTV MSO Buydown - PV</label>
            </value>
            <value>
                <fullName>DIRECTV Residential Buydown</fullName>
            </value>
            <value>
                <fullName>DIRECTV SMATV Buydown</fullName>
            </value>
            <value>
                <fullName>DSA - Final Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>