OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Paperwork_Contact__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Contact__c</fullName>
    <label>Paperwork Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>