OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Paperwork_Follow_Up_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Follow_Up_Attempts__c</fullName>
    <label>Paperwork Follow Up Attempts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>AC Working</fullName>
            </value>
            <value>
                <fullName>1st Attempt</fullName>
            </value>
            <value>
                <fullName>2nd Attempt</fullName>
            </value>
            <value>
                <fullName>3rd Attempt</fullName>
            </value>
            <value>
                <fullName>Back to Sales</fullName>
            </value>
            <value>
                <fullName>Back to AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>