OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Paperwork_Follow_Up_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Follow_Up_Last_Update__c</fullName>
    <label>Paperwork Follow Up Last Update</label>
    <type>Date</type>
</CustomField>