OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Pardot_Address__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Address__c</fullName>
    <description>This field is used by Pardot to send communication emails [PER-3195]</description>
    <label>Pardot Address</label>
    <type>Address</type>
</CustomField>