OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Pardot_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Customer_Name__c</fullName>
    <label>Pardot Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>