OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Pardot_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Installation_Date__c</fullName>
    <label>Pardot Installation Date</label>
    <type>Date</type>
</CustomField>