OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Pardot_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Order_Number__c</fullName>
    <label>Pardot Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>