OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Pardot_Referral__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Referral__c</fullName>
    <label>Pardot Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>