OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
                <label>No Action Required</label>
            </value>
            <value>
                <fullName>ATT - Pending Dealer Code</fullName>
            </value>
            <value>
                <fullName>ATT - Pending UID</fullName>
            </value>
            <value>
                <fullName>ATT - Pending Eligibility</fullName>
            </value>
            <value>
                <fullName>VS - Pending Initial Review</fullName>
            </value>
            <value>
                <fullName>VS - Pending Setup</fullName>
            </value>
            <value>
                <fullName>CLINK - Pending Field Approval</fullName>
            </value>
            <value>
                <fullName>CLINK - Pending Compliance</fullName>
            </value>
            <value>
                <fullName>CLINK - Pending Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>