OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/PO_Total_from_Quote__c.field-meta.xml
<CustomField>
    <fullName>PO_Total_from_Quote__c</fullName>
    <label>PO Total from Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>