OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_AddressDiscrepancy__c.field-meta.xml
<CustomField>
    <fullName>POE_AddressDiscrepancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Discrepancy</label>
    <type>Checkbox</type>
</CustomField>