OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>POE_Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>