OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_Cart_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>POE_Cart_Terms_And_Conditions__c</fullName>
    <description>Used by Terms &amp; Conditions public page and Poe_lwcBuyflowDirecTvTermsTab to store user T&amp;C of the selected products. (PER-3261)</description>
    <label>Cart Terms and Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>