OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CC_Ccv__c.field-meta.xml
<CustomField>
    <fullName>POE_CC_Ccv__c</fullName>
    <label>CCV</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>