OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CC_CreditCardNumber__c.field-meta.xml
<CustomField>
    <fullName>POE_CC_CreditCardNumber__c</fullName>
    <label>Credit Card Number</label>
    <length>16</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>