OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CC_CreditCardType__c.field-meta.xml
<CustomField>
    <fullName>POE_CC_CreditCardType__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>discovery</fullName>
                <isActive>false</isActive>
                <label>discovery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>