OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/POE_CC_ExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>POE_CC_ExpirationYear__c</fullName>
    <label>Expiration Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
            <value>
                <fullName>22</fullName>
                <isActive>false</isActive>
                <label>22</label>
            </value>
            <value>
                <fullName>23</fullName>
                <isActive>false</isActive>
                <label>23</label>
            </value>
            <value>
                <fullName>24</fullName>
                <isActive>false</isActive>
                <label>24</label>
            </value>
            <value>
                <fullName>25</fullName>
                <isActive>false</isActive>
                <label>25</label>
            </value>
            <value>
                <fullName>26</fullName>
                <isActive>false</isActive>
                <label>26</label>
            </value>
            <value>
                <fullName>27</fullName>
                <isActive>false</isActive>
                <label>27</label>
            </value>
            <value>
                <fullName>28</fullName>
                <isActive>false</isActive>
                <label>28</label>
            </value>
            <value>
                <fullName>29</fullName>
                <isActive>false</isActive>
                <label>29</label>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
            <value>
                <fullName>31</fullName>
                <isActive>false</isActive>
                <label>31</label>
            </value>
            <value>
                <fullName>32</fullName>
                <isActive>false</isActive>
                <label>32</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>